# fhir-gen

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
configs/: ccda-on-fhir-pydantic.yaml  fhir-r4-pydantic.yaml  fhir-r5-pydantic.yaml
fhir_gen/: __init__.py  cli.py  definitions.py  parsing.py  patch.py  rendering.py  utils.py
presets/fhir_pydantic_project/: __init__.py  complex_type.py.tmpl  primitives.py.tmpl  pyproject.toml.tmpl
templates/pydantic_project/: fhir_class.py.tmpl  manifest.yaml
