[tool.poetry]
name = "fhir-gen"
version = "0.1.0"
description = ""
authors = ["Raymond Reggers <me@rmmr.dev>"]
packages = [
    { include = "fhir_gen" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jsonargparse = "^4.27.5"
requests = "^2.31.0"
dataclass-wizard = "^0.22.3"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pylint= "^2.14.1"
pyright= "^1.1.351"
black = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fhir-gen = "fhir_gen.cli:main"

